# XNNPACK

./: BUILD.bazel  BUILD.gn  CMakeLists.txt  MODULE.bazel
.github/workflows/: build.yml
bench/: BUILD.bazel  CMakeLists.txt  qd8-bf16-qb4w-gemm.cc  qs8-qc8w-gemm-fp32.cc  xx-pad.cc
bench/operators/: fully-connected.cc
bench/subgraph/: attention.cc  fully-connected.cc
cmake/: DownloadCpuinfo.cmake  DownloadKleidiAI.cmake
include/: xnnpack.h
litert/tensor/: BUILD  arithmetic.h  arithmetic_graph.h  arithmetic_test.cc  buffer.h  buffer_test.cc  datatypes.h  datatypes_test.cc  tensor.cc  tensor.h  tensor_test.cc
scripts/: generate-f16-vcos.sh  generate-f16-vsin.sh  generate-qs8-gemm.sh  generate-x8-packw.sh
src/: init.c  memory-planner.c  operator-run.c  subgraph.c  tensor.c
src/amalgam/: ssse3.c
src/configs/: gemm-config.c  unary-elementwise-config.c  xx-pad-config.c
src/f16-vapproxgelu/: f16-vapproxgelu.inc
src/f16-vcos/: f16-vcos.inc
src/f16-vsin/: f16-vsin.inc  (+4 more)
test/: convolution-nchw.cc  convolution-nhwc.cc  convolution-operator-tester.h  f32-ibilinear.cc  f32-ibilinear.yaml  packw-microkernel-tester.h  qb4-packw.cc  qd8-bf16-qb4w-gemm-minmax.cc  qd8-bf16-qb4w-gemm-minmax.yaml  qs8-qc8w-gemm-minmax-fp32-2.cc  qs8-qc8w-gemm-minmax-fp32-3.cc  qs8-qc8w-gemm-minmax-fp32.cc  qs8-qc8w-gemm-minmax-fp32.yaml  transpose-nd.cc  transpose-operator-tester.h  unary-ops.h  xx-pad.cc
tools/: generate-ibilinear-test.py
ynnpack/: BUILD  CMakeLists.txt
ynnpack/composites/: BUILD  CMakeLists.txt  composites.h  dot.cc  dot_bench.cc  dot_test.cc  pooling.cc
(+199 files in other folders)
